# shipsim

./: CMakeLists.txt  package.xml
doc/: sim_struct.drawio
include/shipsim/: core.hh  dynamic_solver.hh  error.hh  phyconst.hh  topicif.hh
include/shipsim/common/: codedef.hh
include/shipsim/core/: shipsim.hh  solver.hh
include/simmodel/: dynamic_solver.hpp  mmg_models.hpp  mmg_parameter.hpp  mmg_variable.hpp
log/: latest_list
src/shipsim/: core.cc  node.cc
src/shipsim/core/: shipsim.cc  solver.cc
src/simmodel/: mmg_models.cpp  mmg_parameter.cpp
