<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>shipsim</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">suisei</maintainer>
  <license>NOT FREE(Under Preparing)</license>

  <build_depend>ament_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shipsim_model</depend>
  <depend>shipsim_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
